<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.detail.DetailMovieFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/detail_movie_img_backdrop"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        tools:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/backgrounds/scenic" />

        <androidx.cardview.widget.CardView
            android:layout_width="160dp"
            android:layout_height="220dp"
            app:layout_constraintBottom_toBottomOf="@+id/detail_movie_img_backdrop"
            app:layout_constraintEnd_toEndOf="@+id/detail_movie_img_backdrop"
            app:layout_constraintHorizontal_bias="0.0"
            android:id="@+id/detail_card_poster"
            app:cardElevation="2dp"
            app:cardPreventCornerOverlap="false"

            app:cardCornerRadius="2dp"
            app:layout_constraintStart_toStartOf="@+id/detail_movie_img_backdrop"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_img_backdrop">

            <ImageView
                android:id="@+id/detail_movie_img_poster"
                android:layout_width="match_parent"
                tools:scaleType="centerCrop"
                android:layout_height="match_parent"
                tools:src="@tools:sample/avatars" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/detail_movie_text_judul"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:text="judul film"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="@+id/detail_movie_img_backdrop"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/detail_card_poster"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_img_backdrop" />


        <com.sackcentury.shinebuttonlib.ShineButton
            android:id="@+id/detail_moviel_btn_fav"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerInParent="true"
            android:layout_marginEnd="8dp"
            android:src="@android:color/darker_gray"
            app:allow_random_color="false"
            app:btn_color="@android:color/darker_gray"
            app:btn_fill_color="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/detail_movie_text_rating"
            app:layout_constraintEnd_toStartOf="@+id/detail_movie_text_rating"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/detail_movie_text_judul"
            app:layout_constraintTop_toTopOf="@+id/detail_movie_text_rating"
            app:siShape="@drawable/ic_star_selected" />


        <TextView
            android:id="@+id/detail_movie_text_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="7.5 / 10"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="@id/detail_movie_text_judul"
            app:layout_constraintTop_toBottomOf="@id/detail_movie_text_judul" />


        <TextView
            android:id="@+id/textview3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            tools:text="Description"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="@+id/detail_card_poster"
            app:layout_constraintTop_toBottomOf="@+id/detail_card_poster" />

        <TextView
            android:id="@+id/detail_movie_text_deskripsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:text="rfg"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textview3"
            app:layout_constraintTop_toBottomOf="@+id/textview3"
            tools:text="@tools:sample/lorem/random" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>