...
    <fragment
        android:id="@+id/movieFragment"
        android:name="com.daya.katalogfilm.view.movie.MovieFragment"
        android:label="fragment_movie"
        tools:layout="@layout/fragment_movie" >
        <action
            android:id="@+id/action_movieFragment_to_detailFragment"
            app:destination="@id/detailFragment"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            />
...
